<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.splash_and_onboarding_screens.onboard.OnBoardScreen5">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_80sdp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/icon_onboard"
        android:src="@drawable/onboard5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif"
        android:text="@string/join_the_smart_desk_community"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_25ssp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif"
        android:paddingHorizontal="@dimen/_25ssp"
        android:paddingTop="@dimen/_10sdp"
        android:text="@string/lorem_ipsum_dolor_sit_amet_a_aconsectetur_ut_proin_accumsan_be"
        android:textAlignment="center"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_in_btn"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_2sdp"
            android:layout_weight="1"
            android:background="@drawable/signin_button"
            android:fontFamily="sans-serif"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_btn"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_2sdp"
            android:layout_weight="1"
            android:background="@drawable/register_button"
            android:fontFamily="sans-serif"
            android:text="@string/register"
            android:textColor="@color/next_button_color"
            android:textSize="@dimen/_16ssp" />
    </LinearLayout>
</LinearLayout>