<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_10sdp"
    android:orientation="vertical"
    tools:context=".ResetPasswordScreen">

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/back_reset_pass_btn"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center|start"
        android:background="@drawable/back_shape_btn"
        android:paddingStart="@dimen/_10sdp"
        android:src="@drawable/ic_back" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_90sdp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/reset_password"
        android:textColor="@color/next_button_color"
        android:textSize="@dimen/_30ssp"
        android:textStyle="bold" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_10sdp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/lorem_ipsum_dolor_sit_amet_a_aconsectetur_ut_proin_accumsan_be"
        android:textColor="@color/next_button_color" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="#F4F4F4"
        app:boxStrokeColor="#DEDEDE">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email_address"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_screen_register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/signin_button"
        android:text="@string/send_code"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_password"
            android:textColor="@color/hint_color" />

        <TextView
            android:id="@+id/sign_in_here_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:focusable="true"
            android:text="@string/sign_in_here"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>