<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_10sdp"
    android:orientation="vertical"
    tools:context=".ui.sign_up_screens.SignInScreen">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_60sdp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/next_button_color"
        android:textSize="@dimen/_30ssp"
        android:textStyle="bold" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_10sdp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/lorem_ipsum_dolor_sit_amet_a_aconsectetur_ut_proin_accumsan_be"
        android:textColor="@color/next_button_color" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_signIn_layout"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:boxBackgroundColor="#F4F4F4"
        app:boxStrokeColor="#DEDEDE">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input_signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_5sdp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pasword_input_signIn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:boxBackgroundColor="#F4F4F4"
        app:boxStrokeColor="#DEDEDE">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input_signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_visibility_false"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_10sdp" />

    <TextView
        android:id="@+id/forgot_password_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="@string/forget_password"
        android:textColor="@color/hint_color" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_signIn_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/signin_button"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">

        <View
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/line_color" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:text="@string/or_sign_in_with"
            android:textColor="@color/hint_color"
            android:textSize="@dimen/_15ssp" />

        <View
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/line_color" />
    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/google_signIn_btn"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/continue_google_btn_shape"
        android:drawableStart="@drawable/ic_google_logo"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_20sdp"
        android:text="@string/continue_with_google"
        android:textColor="@color/hint_color" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/hint_color" />

        <TextView
            android:id="@+id/register_her_text_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:focusable="true"
            android:text="@string/register_her"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>