<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".ui.splash_and_onboarding_screens.onboard.OnboardScreen1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_20sdp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/skip1_button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/skip_button_custom"
            android:fontFamily="sans-serif"
            android:text="@string/skip"
            android:textColor="#01261C"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Space
            android:id="@+id/space1_1"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/skip1_button_1" />

        <ImageView
            android:id="@+id/image1_onboard_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:src="@drawable/onboard1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/space1_1" />

        <TextView
            android:id="@+id/title1_onboard_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="sans-serif"
            android:text="@string/empower_your_mind_with_us"
            android:textAlignment="center"
            android:textColor="#022d4f"
            android:textSize="@dimen/_35ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image1_onboard_1" />

        <TextView
            android:id="@+id/description1_onboard_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/lorem_ipsum_dolor_sit_amet_a_aconsectetur_ut_proin_accumsan_be"
            android:textAlignment="center"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title1_onboard_1" />


        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description1_onboard_1">

            <ProgressBar
                android:id="@+id/progressBar1"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="@dimen/_105sdp"
                android:layout_height="@dimen/_105sdp"
                android:background="@drawable/circle_shape"
                android:indeterminate="false"
                android:max="4"
                android:progress="1"
                android:progressDrawable="@drawable/custom_progress_drawable" />

            <ImageButton
                android:id="@+id/next1_button_1"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:layout_gravity="center"
                android:background="@drawable/next_button_custom"
                android:contentDescription="@string/ic_next"
                android:src="@drawable/ic_next" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>